--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -28,6 +28,11 @@
                    <input class="form-control me-2" type="search" placeholder="Поиск..." aria-label="Search" name="search">
                    <button class="btn btn-outline-light" type="submit">Найти</button>
                </form>
+                <ul class="navbar-nav ms-3">
+                   <li class="nav-item">
+                       <a class="nav-link" href="{% url 'car_create' %}"> Создать новый автомобиль</a>
+                   </li>
+               </ul>
            </div>
        </div>
    </nav>
@@ -36,13 +41,15 @@
        <div class="row">
            {% for car in cars %}
              <div class="col-12 col-sm-6 col-lg-4 mb-4">
-                 <div class="card h-100 shadow-sm">
-                     <img src="{{ car.image.url }}" class="card-img-top" alt="{{ car.title }}">
-                     <div class="card-body">
-                         <h5 class="card-title">{{ car.title }}</h5>
-                         <p class="card-text">{{ car.description|truncatechars:50 }}</p>
+                 <a href="{% url 'detail' car.id %}">
+                     <div class="card h-100 shadow-sm">
+                         <img src="{{ car.image.url }}" class="card-img-top" alt="{{ car.title }}">
+                         <div class="card-body">
+                             <h5 class="card-title">{{ car.title }}</h5>
+                             <p class="card-text">{{ car.description|truncatechars:50 }}</p>
+                         </div>
                      </div>
-                 </div>
+                 </a>
              </div>
            {% endfor %}
        </div>
